# rumboost

./: .gitignore  .gitignore.txt  LICENSE.txt  README.md  biogeme.toml  debug.py  example.ipynb  pyproject.toml  requirements.txt  rumboost_nn.py  setup.py  strat_group_k_fold.pickle  strat_group_k_fold_optima.pickle  test.py
Data/: LPMC_test.csv  LTDS_test.csv  all_z_idx.csv  strat_group_k_fold_london.pickle  strat_group_k_fold_mtmc.pickle  z_idx.csv  z_idx_all_wo_alps.csv
docs/: conf.py  index.rst  modules.rst  requirements.txt  rumboost.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  rumboost.doctree  setup.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rumboost.html  search.html  searchindex.js  setup.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/rumboost/: basic_functions.html  dataset.html  models.html  rumboost.html  utility_plotting.html  utility_smoothing.html  utils.html
example/: biogeme.toml  feature_interaction.ipynb
examples/: 2_feature_interaction.ipynb  3_nested.ipynb  4_functional_effect.ipynb  5_cross-nested.ipynb  5_nested.ipynb  6_cross-nested.ipynb  7_smoothing_and_vot.ipynb  9_GPU_and_batch_training.ipynb  functional_effect.ipynb  nested.ipynb
rumboost/: __init__.py  basic_functions.py  biogeme.toml  constant_parameter.py  dataset.py  datasets.py  example.ipynb  linear_trees.py  metrics.py  models.py  nested_cross_nested.py  ordinal.py  post_process.py  rumboost.py  strat_group_k_fold.pickle  tests.py  torch_functions.py  utility_plotting.py  utility_smoothing.py  utils.py
rumboost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py  test_rumboost.py
