[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rumboost"
version = "1.0.0"
authors = [
  { name="Nicolas Salvadé", email="nicolas.salvade.22@ucl.ac.uk" },
]
description = "Gradient Boosting Decision Trees for Random Utility Models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NicoSlvd/rumboost"
Issues = "https://github.com/NicoSlvd/rumboost/issues"