[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rumboost"
version = "1.0.1"
authors = [
  { name="Nicolas Salvadé", email="nicolas.salvade.22@ucl.ac.uk" },
]
description = "Gradient Boosting Decision Trees for Random Utility Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biogeme==3.2.11",
    "hyperopt==0.2.7",
    "lightgbm==3.3.5",
    "matplotlib==3.7.1",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NicoSlvd/rumboost"
Issues = "https://github.com/NicoSlvd/rumboost/issues"